0.8.6
- Hel Vanguard
	- Defense changed from damper to shields
- Added Hel Sunder
- Added Hel Hound
- Added Hel Kodai
- Legio Rising
	- Updated fleet composition with new Daemons
	- Now has more Daemons when scaled up to higher FP
- Updated Kodai sprite
- Updated Bungalow sprite
- Other minor sprite updates
- Rolled high maintenance effect into Daemon Core
- Removed high maintenance from Daemons
- Slightly increased daemon spawnrate in regular Legio fleets
- Hel Plating/Carapace
	- Added an additional flat 100 armor for calculation
	- Plating now reduces armor to 1/pi



0.8.5
- Dun Scaith
	- DP lowered from 55 to 50
- Hel Scaith
	- DP lowered from 70 to 65
	- Built-in Fray cannon has been replaced with Hel Razer
	- System changed to Impes Infernalis
- Hel Vanguard
	- System changed to Assault Burn
- Hel Centurion
	- System changed to Hel Temporal Shell
- Hel Flash
	- Top speed reduced from 190 to 170
	- HP reduced from 500 to 400
- Nirvana
	- Lowered armor from 1600 to 1400
- Daemon defenses reworked
	- Now use regenerating armor
	- Greatly reduced armor ratings 
- Timeless Prototype
	- Top speed increased from 40 to 55
- Aetnos
	- Now fires a burst of two shots
- Made Hel Scaith less common
- Added new reward for Legio Rising
- Removed Scathach bounty and ship
- Made hard mode even harder
- Code improvements
- Added malware
- Improved Legio Tyranny tooltip
- Made Daemons stronger in autoresolve
- Added toggle for Daemons to config
- Added illustrations for Legio planets


0.8.4
- Various Daemon tweaks
- Hel Centurion system changed to fortress shield
- Hel Dominator system changed to canister flaks
- Small stat tweaks here and there
- Removed meme features from Daemon Core
- Added a 10% timeflow reduction in player fleet to Daemon Core
- Nelson (XIV) Hammer tubes changed to Sabot tubes
    - This is mainly a lore-based change since built-in hammers don't really make sense on a XIV ship


0.8.3a
- Hotfix


0.8.3
- Added Legio Hard Mode