@@ -30,6 +30,7 @@ Phoca,tahlan_Phoca,Light Cruiser,Midline,ammofeed,12,5500,650,9000,,500,140,,80,
 Defiance,tahlan_Defiance,Missile Cruiser,Midline,forgevats,14,8500,800,7000,,400,160,,60,70,40,20,25,1400,FRONT,,270,0.5,0.8,,,160,280,110,100,3,27,8,120000,3,12,480,0.25,24,24,,"rare_bp, hist2t",,0.5,2,3,556664
 Ingress,tahlan_Ingress,Battlecarrier,Midline,tahlan_navigationfeed,28,14000,1000,13000,,800,240,4,40,30,24,10,10,3500,OMNI,,90,0.4,1,,,650,1300,280,250,14,19,8,340000,5,15,720,0.25,40,40,"CARRIER, COMBAT, NO_AUTO_ESCORT","rare_bp, hist3t",,0.4,2,4,12121
 Kodai,tahlan_Kodai,Cruiser,Midline,maneuveringjets,14,8000,800,10000,,600,120,1,60,40,25,20,30,1100,FRONT,,160,0.4,0.8,,,170,300,300,120,3,33,8,110000,3,12,480,0.25,22,22,,"rare_bp, hist2t",,0.5,2,3,121212
+Raba,tahlan_raba,Mining Barge,Low Tech,maneuveringjets,14,8000,1100,10000,,400,110,2,60,35,21,16,24,1200,PHASE,damper,,,,,,140,240,500,120,3,33,8,90000,3,12,480,0.25,18,18,,rare_bp,,0.5,2,3,121212
 Tempest (P),tahlan_Tempest_P,Frigate,Pirate,tahlan_weaponsoverdrive,8,1100,200,2500,,200,50,1,180,200,175,90,270,200,OMNI,,120,0.2,0.8,,,15,25,30,20,1,20,11,40000,10,20,180,0.25,8,8,,rare_bp,0.75,0.5,2,2,206
 Eagle (P),tahlan_Eagle_P,Cruiser,Pirate,tahlan_raiderjets,15,8000,900,10000,,500,155,1,50,30,20,15,20,1200,FRONT,,270,0.4,0.8,,,150,250,150,100,3,33,8,140000,3,12,480,0.25,22,22,WEAPONS_FRONT_TO_BACK,rare_bp,0.75,0.5,2,3,40111
 Cordite,tahlan_Cobalt,Cruiser,High Tech,highenergyfocus,14,5000,600,10000,,700,140,,90,100,80,30,60,750,OMNI,,160,0.3,0.7,,,70,140,60,80,3,27,9,120000,4,12,420,0.25,25,25,,"rare_bp, hist2t",0.75,2,2,3,
