@@ -1,0 +1,231 @@
+{
+  "hullName": "Raba",
+  "hullId": "tahlan_raba",
+  "hullSize": "CRUISER",
+  "spriteName": "graphics/tahlan/ships/tahlan_raba.png",
+  "style": "LOW_TECH",
+  "height": 234,
+  "width": 214,
+  "center": [107.5, 126],
+  "collisionRadius": 132.5,
+  "shieldCenter": [0, 0],
+  "shieldRadius": 126.5,
+  "viewOffset": 0,
+  "builtInMods": [
+    "surveying_equipment",
+    "rugged"
+  ],
+  "builtInWings": [
+    "mining_drone_wing",
+    "mining_drone_wing"
+  ],
+  "builtInWeapons": {
+    "WS0009": "tahlan_mininglance"
+  },
+  "weaponSlots": [
+    {
+      "id": "WS0001",
+      "size": "MEDIUM",
+      "type": "COMPOSITE",
+      "mount": "HARDPOINT",
+      "arc": 5,
+      "angle": 0,
+      "locations": [40, 59.5]
+    },
+    {
+      "id": "WS0002",
+      "size": "MEDIUM",
+      "type": "COMPOSITE",
+      "mount": "HARDPOINT",
+      "arc": 5,
+      "angle": -0,
+      "locations": [40, -60.5]
+    },
+    {
+      "id": "WS0003",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "HARDPOINT",
+      "arc": 5,
+      "angle": -0,
+      "locations": [81, -32.5]
+    },
+    {
+      "id": "WS0004",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "HARDPOINT",
+      "arc": 5,
+      "angle": 0,
+      "locations": [81, 31.5]
+    },
+    {
+      "id": "WS0007",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "TURRET",
+      "arc": 129,
+      "angle": 33.5,
+      "locations": [44, 19.5]
+    },
+    {
+      "id": "WS0008",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "TURRET",
+      "arc": 129,
+      "angle": -33.5,
+      "locations": [44, -20.5]
+    },
+    {
+      "id": "WS0005",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "TURRET",
+      "arc": 129,
+      "angle": 142,
+      "locations": [-15, 51.5]
+    },
+    {
+      "id": "WS0006",
+      "size": "SMALL",
+      "type": "BALLISTIC",
+      "mount": "TURRET",
+      "arc": 129,
+      "angle": -142,
+      "locations": [-15, -52.5]
+    },
+    {
+      "id": "WS0009",
+      "size": "MEDIUM",
+      "type": "BUILT_IN",
+      "mount": "HARDPOINT",
+      "arc": 0,
+      "angle": -0,
+      "locations": [80.5, -0.5]
+    },
+    {
+      "id": "LB 1",
+      "size": "LARGE",
+      "type": "LAUNCH_BAY",
+      "mount": "HIDDEN",
+      "arc": 360,
+      "angle": 0,
+      "locations": [
+        17.5, -33,
+        30, -32.5
+      ]
+    },
+    {
+      "id": "LB 2",
+      "size": "LARGE",
+      "type": "LAUNCH_BAY",
+      "mount": "HIDDEN",
+      "arc": 360,
+      "angle": 0,
+      "locations": [
+        29.5, 32,
+        18, 32
+      ]
+    }
+  ],
+  "engineSlots": [
+    {
+      "location": [-70.5, 16.5],
+      "length": 74.5,
+      "width": 27,
+      "angle": 180,
+      "contrailSize": 27,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-70.5, -16.5],
+      "length": 74.5,
+      "width": 27,
+      "angle": -180,
+      "contrailSize": 27,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-70, 25],
+      "length": 46,
+      "width": 12,
+      "angle": 180,
+      "contrailSize": 12,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-70, -25],
+      "length": 46,
+      "width": 12,
+      "angle": -180,
+      "contrailSize": 12,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-29, 71],
+      "length": 51.5,
+      "width": 20,
+      "angle": 180,
+      "contrailSize": 20,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-29, -71],
+      "length": 51.5,
+      "width": 20,
+      "angle": -180,
+      "contrailSize": 20,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-27.5, 83],
+      "length": 30.980778,
+      "width": 13.919972,
+      "angle": 180,
+      "contrailSize": 13.919972,
+      "style": "LOW_TECH"
+    },
+    {
+      "location": [-27.5, -83],
+      "length": 30.980778,
+      "width": 13.919972,
+      "angle": -180,
+      "contrailSize": 13.919972,
+      "style": "LOW_TECH"
+    }
+  ],
+  "bounds": [
+    -70.5, -6.5,
+    -70, -23,
+    -57, -30,
+    -19.5, -31.5,
+    -22, -38,
+    -47, -40,
+    -33, -53,
+    -19.5, -91,
+    43, -83.5,
+    26, -80.5,
+    52.5, -72.5,
+    23, -34,
+    59.5, -35.5,
+    73.5, -15.5,
+    96.5, -15,
+    96.5, 22,
+    73.5, 22.5,
+    59.5, 42.5,
+    23, 41,
+    52.5, 79.5,
+    26, 87.5,
+    43, 90.5,
+    -19.5, 98,
+    -33, 60,
+    -47, 47,
+    -22, 45,
+    -19.5, 38.5,
+    -57, 37,
+    -70, 30,
+    -70.5, 13.5,
+    -121.5, 3.5
+  ]
+}
