@@ -20,6 +20,9 @@ tahlan_Vale,SHIP,"""With holy furor he searches the land for any who would defy 
 tahlan_Exa_Pico,SHIP,"Rumours say the origin of this unusual craft was a bet between engineers of the Great Houses to turn the Kite into a fearsome combat vessel. True or not, the Exa Pico exists and is indeed a fearsome vessel in its own right. Probably taking inspiration from the Tempest, the Exa Pico heavily relies on its drones to provide the majority of its combat potential while the modified Kite itself serves primarily as control unit. Each drone is equipped with a powerful fractal laser, capable of engaging multiple targets at once and wiping outs whole swarms of missiles and strikecraft. 
 Powerful as these capabilities are, however, the ship is still small and quite fragile while also being unable to deploy its drones from range, requiring close proximity to retain control of the advanced hardware.",,,
 tahlan_Kodai,SHIP,"Based on the chassis of a reliable mining cruiser, the Kodai was overhauled from ground up for military use. Upgraded with more proper armor plating and modern hybrid weapon mounts, the only relic of its predecessor's role is the nose-mounted mining lance, as it proved to be surprisingly effective in combat. Originally designed to safely maneuver in and survey asteroid fields, the Kodai's chassis still comes equipped with state-of-the-art surveying equipment and a drive assembly that allows for swift movement. The focus on medium hardpoints is another artifact of its origins, once meant to hold a number of mining blasters, it now gives the Kodai menacing frontal firepower while its mobility mitigates risks of being flanked effectively.",,,
+tahlan_raba,SHIP,"Rarely still seen in active service, the Raba is an old mining barge that never enjoyed much popularity and proved a commercial failure. Only through the later adaption of its chassis for the Kodai-class cruiser, did manufacturer avert financial ruin.
+
+In the years after the collapse, the ship has found a second lease on life as a cheap and rugged craft that as easily built and maintained, often in the hands of less fortunate mercenaries and salvagers.",,,
 tahlan_Ambrosia,SHIP,"An unusual design, the Ambrosia was seemingly constructed around the salvaged hangar module of an unknown carrier design. While its exact origins are unknown, the hangar module is filled to the brim with state-of-the-art technology, including a recall system. Connecting the hangar module to a colorful mixture of salvaged ship parts has allowed it to operate as a standalone ship with surprising effectiveness, even though it is likely that whatever engineers are responsible for the design barely understood even half the technologies hidden inside the module.",,,
 tahlan_Castella,SHIP,"An outdated carrier design, the Castella had mostly been replaced by the Legion in fleets of the Domain, but found itself popular with smaller system defense forces or independent fleets. Salvagers in particular took a liking to the antiquated design.",,,
 tahlan_Castella_lp,SHIP,"Fanatics of the Luddic Path have made this ship their own, stripping out all unnecessary furnishing and transforming it into a haphazard vehicle of holy war. Sacrificing its intended carrier role, Pathers have instead refitted this ship with a hammer barrage launcher and autoloader system, as well as a pair of massive additional thrusters to carry them into battle at speeds the Castella was never designed for.
