@@ -47,7 +47,8 @@
 			"tahlan_throne",
 			"tahlan_skyrend",
 			"tahlan_nelson",
-			"tahlan_tower"
+			"tahlan_tower",
+			"tahlan_raba"
 		],
 	},
 	# listing ships here will make the faction mostly use them even if other hulls become available
