@@ -32,6 +32,7 @@
 			"tahlan_Nibelung",
 			"tahlan_providence",
 			"tahlan_throne",
+			"tahlan_raba"
 		],
 	},
 	# listing ships here will make the faction mostly use them even if other hulls become available
